--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   http: ^0.13.4
   dio: ^4.0.0
   url_launcher: ^6.1.0
+  intl: ^0.18.1
 
 
   # The following adds the Cupertino Icons font to your application.
